--- a/css/index.css
+++ b/css/index.css
@@ -98,7 +98,7 @@ p {
     width: 100%;
     margin-top: -4px;
     background-color: rgb(236,239,240);
-    background: radial-gradient(50% 80% at bottom, rgb(236,239,240) 50%, rgb(31, 38, 48));
+    background: radial-gradient(50% 80% at bottom, rgb(236,239,240) 50%, rgb(31, 38, 48)), url();
 }
 
 .mainContainer {
@@ -128,6 +128,13 @@ p {
     opacity: 0;
     transform: translateX(200px)
 }
+
+#pine {
+    position: adsolute; 
+    width: 100%;
+    bottom: 0;
+}
+
 
 /* Getting rid of the margin that lines the entire page. */
 body {
