--- a/css/index.css
+++ b/css/index.css
@@ -98,7 +98,7 @@ p {
     width: 100%;
     margin-top: -4px;
     background-color: rgb(236,239,240);
-    background: radial-gradient(50% 80% at bottom, rgb(236,239,240) 50%, rgb(31, 38, 48)), url();
+    background: radial-gradient(50% 80% at bottom, rgb(236,239,240) 50%, rgb(31, 38, 48)), url(images/index/Pine_forest_silhouette.jpg);
 }
 
 .mainContainer {
@@ -133,6 +133,7 @@ p {
     position: adsolute; 
     width: 100%;
     bottom: 0;
+    opacity: 0.8;
 }
 
 
