--- a/css/resume.css
+++ b/css/resume.css
@@ -40,6 +40,7 @@ body {
     height: 100%;
     width: 100%;
     margin: 0;
+    position: absolute;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
