--- a/css/index.css
+++ b/css/index.css
@@ -98,12 +98,12 @@ p {
     width: 100%;
     margin-top: -4px;
     background-color: rgb(236,239,240);
-    background: radial-gradient(50% 80% at bottom, rgb(236,239,240) 50%, rgb(31, 38, 48)), url('/images/index/Pine_forest_silhouette.jpg');
+    background: radial-gradient(50% 80% at bottom, rgb(236,239,240) 50%, rgb(31, 38, 48));
 }
 
 .mainContainer {
     background: rgb(31, 38, 48);
-    background: linear-gradient(to right, rgb(31, 38, 48), rgb(236,239,240) 25% 75%, rgb(31, 38, 48));
+    background: linear-gradient(to right, rgb(31, 38, 48), rgb(236,239,240) 25% 75%, rgb(31, 38, 48)), url(/images/index/Pine_forest_silhouette.jpg);
     margin-top: -20px;
 }
 
