--- a/css/index.css
+++ b/css/index.css
@@ -103,7 +103,8 @@ p {
 
 .mainContainer {
     background: rgb(31, 38, 48);
-    background: linear-gradient(to right, rgb(31, 38, 48), rgb(236,239,240) 25% 75%, rgb(31, 38, 48)), url(/images/index/Pine_forest_silhouette.jpg);
+    background-image: linear-gradient(to right, rgb(31, 38, 48), rgb(236,239,240) 25% 75%, rgb(31, 38, 48)), 
+        url(/images/index/Pine_forest_silhouette.jpg);
     margin-top: -20px;
 }
 
