--- a/css/resume.css
+++ b/css/resume.css
@@ -40,10 +40,13 @@ body {
     height: 100%;
     width: 100%;
     margin: 0;
-    position: relative;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+}
+
+#background {
+    position: absolute;
 }
 
 h1 { 
