--- a/css/resume.css
+++ b/css/resume.css
@@ -46,7 +46,12 @@ body {
 }
 
 #background {
-    position: absolute;
+     height: 100%;
+    width: 100%;
+    margin: 0;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 h1 { 
