--- a/css/resume.css
+++ b/css/resume.css
@@ -40,15 +40,17 @@ body {
     height: 100%;
     width: 100%;
     margin: 0;
+    position: relative;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
 
 #background {
-     height: 100%;
+    height: 100%;
     width: 100%;
     margin: 0;
+    position: absolute;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
